# rules_ocaml

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.adoc  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzl  utils.bzl
cfg/: BUILD.bazel  nil.ml
cfg/archive/: BUILD.bazel
cfg/cc_deps/: BUILD.bazel
cfg/cmt/: BUILD.bazel
cfg/constantly/: BUILD.bazel
cfg/csdk/ctypes/: BUILD.bazel
cfg/debug/: BUILD.bazel
cfg/executable/: BUILD.bazel
cfg/executable/linkall/: BUILD.bazel
cfg/keep-locs/: BUILD.bazel
cfg/manifest/: BUILD.bazel
cfg/module/: BUILD.bazel
cfg/noassert/: BUILD.bazel
cfg/ns/: BUILD.bazel
cfg/ns_library/: BUILD.bazel
cfg/ocaml/: BUILD.bazel
cfg/opaque/: BUILD.bazel
cfg/option/: BUILD.bazel
cfg/runtime/: BUILD.bazel
cfg/runtime/sys/: BUILD.bazel
cfg/runtime/vm/: BUILD.bazel
cfg/short-paths/: BUILD.bazel
cfg/signature/: BUILD.bazel
cfg/strict-formats/: BUILD.bazel
cfg/strict-sequence/: BUILD.bazel
cfg/toolchain/: BUILD.bazel
cfg/types/: BUILD.bazel
cfg/verbose/: BUILD.bazel
cfg/xmo/: BUILD.bazel
coq/: BUILD.bazel  bootstrap.bzl  providers.bzl  rules.bzl
coq/_bootstrap/: BUILD.bazel  coq.bzl  hermetic.bzl  opam.bzl  switch.bzl
coq/_providers/: coq.bzl
coq/_rules/: coq_extension.bzl  coq_library.bzl  coq_plugin.bzlX  coq_sublibrary.bzl  impl_coq_library.bzl
coq/_templates/: BUILD.coq_sdk.toolchains  BUILD.coq_sdk.tools
coq/_toolchains/: BUILD.bazel  coq_toolchains.bzl
implementation/config/: BUILD.bazel
ocaml/: BUILD  BUILD.bazel  aggregators.bzl  aspects.bzl  bootstrap.bzl  build.bzl  deps.bzl  macros.bzl  ocamlinfo.bzl  ppx.bzlx  providers.bzl  rules.bzl
ocaml/_actions/: BUILD.bazel  compile_module.bzl  library.bzl  module.bzl  ns_module.bzl  ppx.bzl  ppx_transform.bzl  rename.bzl  utils.bzl
ocaml/_aspects/: debug.bzl  depsets.bzl  ocaml.bzl  outputs.bzl  ppx.bzl
ocaml/_bootstrap/: BUILD.bazel  coq.bzl  obazl.bzl  ocaml.bzl  opam.bzl  opam.x.bzl
ocaml/_bootstrap/opam/: BUILD.opam.tpl  BUILD.opampkg.tpl  opam.md  repo
ocaml/_config/: settings.bzl  transitions.bzl
ocaml/_debug/: BUILD.bazel  colors.bzl  pprint.bzl  utils.bzl
ocaml/_functions/: BUILD.bazel  common.bzl  deps.bzl  module_naming.bzl  utils.bzl
ocaml/_providers/: BUILD.bazel  archive.bzl  imports.bzl  module.bzl  ocaml.bzl  opam.bzl  ppx.bzl
ocaml/_repo_rules/: new_local_pkg_repository.bzl  ocaml.bzl
ocaml/_rules/: BUILD.bazel  README.md  doc_rules_ocaml.bzl  doc_rules_ppx.bzl  impl_archive.bzl  impl_binary.bzl  impl_ccdeps.bzl  impl_common.bzl  impl_executable.bzl  impl_library.bzl  impl_module.bzl  impl_ns.bzl  impl_ns_archive.bzl  impl_ns_library.bzl  impl_ns_module.bzl  impl_ns_resolver.bzl  impl_pack_library.bzl  impl_ppx_transform.bzl  ocaml_archive.bzl  ocaml_binary.bzl  ocaml_deps.bzl  ocaml_exec_module.bzl  ocaml_executable.bzl  ocaml_genrule.bzl  ocaml_import.bzl  ocaml_interface.bzl  ocaml_lex.bzl  ocaml_library.bzl  ocaml_module.bzl  ocaml_ns.bzl  ocaml_ns_archive.bzl  ocaml_ns_env.bzl  ocaml_ns_init.bzl  ocaml_ns_library.bzl  ocaml_ns_module.bzl  ocaml_ns_pack.bzl  ocaml_ns_resolver.bzl  ocaml_ns_resolver_topdown.bzl  ocaml_ns_signature.bzl  ocaml_null.bzl  (+34 more)
ocaml/_rules/utils/: BUILD.bazel  rename.bzl  utils.bzl
ocaml/_templates/: BUILD.ocaml  BUILD.ocaml.archive  BUILD.ocaml.aspects  BUILD.ocaml.cc_deps  BUILD.ocaml.cmt  BUILD.ocaml.csdk  BUILD.ocaml.executable  BUILD.ocaml.interface  BUILD.ocaml.keep_locs  BUILD.ocaml.library  BUILD.ocaml.linkmode  BUILD.ocaml.mode  BUILD.ocaml.module  BUILD.ocaml.module.linkall  BUILD.ocaml.module.thread  BUILD.ocaml.ns  BUILD.ocaml.ns_archive  BUILD.ocaml.ns_env  BUILD.ocaml.signature.threads  BUILD.ocaml.stdlib  BUILD.ocaml.toolchain  BUILD.ocaml.tools  BUILD.ocaml.verbose  ocaml.bigarray.REPO  ocaml.compiler-libs.REPO  ocaml.dynlink.REPO  ocaml.ffi.REPO  ocaml.str.REPO  ocaml.threads.REPO  ocaml.unix.REPO
ocaml/_templates/ocaml_REPO/: bigarray.BUILD  compiler-libs.BUILD  compiler-libs.bytecomp.BUILD  ffi.BUILD  (+7 more)
ocaml/_toolchains/: BUILD.bazel  ocaml_toolchains.bzl  sdk.bzl
ocaml/_transitions/: in_transitions.bzl  ns_transitions.bzl  out_transitions.bzl  transitions.bzl
ocaml/_utils/: deps.bzl
ocaml/dev/: compile.bzl  link.bzl  ocaml_link.bzl
ocaml/extension/: rules.bzl
ocaml/private/: BUILD.bazel  BUILD.csdk.tpl  BUILD.ctypes.csdk.tpl  BUILD.ctypes.ocaml.tpl  BUILD.integers.tpl  BUILD.ppx_bin_prot  BUILD.sdk.tpl  common.bzl  deps.bzl  ocaml_toolchains.bzl  platforms.bzl  providers.bzl  repositories.bzl  sdk.bzl  utils.bzl
ocaml/toolchain/: BUILD.bazel  toolchains.bzl
ocaml_workspace/: BUILD.bazel
ocaml_workspace/archive/: BUILD.bazel
ocaml_workspace/cc_deps/: BUILD.bazel
ocaml_workspace/compiler-libs/: BUILD.bazel
ocaml_workspace/constantly/: BUILD.bazel
ocaml_workspace/executable/: BUILD.bazel
ocaml_workspace/linkmode/: BUILD.bazel
ocaml_workspace/module/: BUILD.bazel
ocaml_workspace/noassert/: BUILD.bazel
ocaml_workspace/ns/: BUILD.bazel
ocaml_workspace/strict-sequence/: BUILD.bazel
ocaml_workspace/verbose/: BUILD.bazel
opam/: BUILD.bazel  BUILD.opam.tpl  BUILD.opampkg.tpl  _opam.bzl  _opam_pinning.bzl  _opam_repo.bzl  bootstrap.bzl  opam.bzl  rules.bzl  switch.sh
opam/_templates/: BUILD.opam.cfg  BUILD.opam.cfg.mt  BUILD.opam.cfg.mt.posix  BUILD.opam.ppx
opam/ppx/: BUILD.tpl
opam/ppxlib/: BUILD.tpl
ppx/: BUILD.bazel  _providers.bzl  ocaml_migrate_parsetree_driver_shim.ml  providers.bzl
ppx/_bootstrap/: BUILD.bazel  ppx.bzl
ppx/_config/: BUILD.bazel  settings.bzl
ppx/_templates/: BUILD.ppx  BUILD.ppx.archive  BUILD.ppx.archive.linkall  BUILD.ppx.debug  BUILD.ppx.driver  BUILD.ppx.executable  BUILD.ppx.executable.deps  BUILD.ppx.mode  BUILD.ppx.module  BUILD.ppx.ns  BUILD.ppx.ocamlfind  BUILD.ppx.print  BUILD.ppx.strict_formats
ppx/_transitions/: BUILD.bazel  transitions.bzl
ppx/executable/: BUILD.bazel
ppx/print/: BUILD.bazel
rt/: BUILD.bazel
stardoc/: BUILD.bazel
toolchain/: BUILD.bazel  BUILD.bzl  adapter.bzl  model.bzl  profiles.bzl  rules.bzl
toolchain/type/: BUILD.bazel
(+222 files in other folders)
