# constraint_setting(name = "mode")
# constraint_value(name = "native", visibility = ["//visibility:public"], constraint_setting="mode")
# constraint_value(name = "bytecode", visibility = ["//visibility:public"], constraint_setting="mode")

platform(
    name = "macos_native",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
        # ":native"
    ]
)

platform(
    name = "macos_bytecode",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
        # ":bytecode"
    ]
)

platform(
    name = "linux_native",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        # ":native"
    ]
)

platform(
    name = "linux_bytecode",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        # ":bytecode"
    ]
)


