module(
    name                = "rules_ocaml",
    version             = "3.0.0.dev",
    compatibility_level = 3,
    bazel_compatibility = [">=8.0.0"]
)

## bcr:
bazel_dep(name = "platforms",      version = "0.0.11")
bazel_dep(name = "bazel_skylib",   version = "1.7.1")
bazel_dep(name = "rules_cc",       version = "0.1.1")
