workspace(name = "obazl_rules_ocaml")


load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# load("@obazl_rules_ocaml//ocaml:deps.bzl",
#      "ocaml_configure_tooling",
#      "ocaml_register_toolchains"
# )

# # NB: we need to do this here so we can use stardoc.
# ocaml_configure_tooling()
# ocaml_register_toolchains(installation="host")

http_archive(
    name = "bazel_skylib",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
    ],
    sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

# git_repository(
#     name = "obazl_rules_opam",
#     remote = "https://github.com/obazl/rules_opam",
#     branch = "main",
# )

################################################################
## rule documentation
git_repository(
    name = "io_bazel_stardoc",
    remote = "https://github.com/bazelbuild/stardoc.git",
    tag = "0.4.0",
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
stardoc_repositories()

#############
http_archive(
    name = "bazel_pandoc",
    strip_prefix = "bazel-pandoc-0.3",
    url = "https://github.com/ProdriveTechnologies/bazel-pandoc/archive/v0.3.tar.gz",
)

load("@bazel_pandoc//:repositories.bzl", "pandoc_repositories")

pandoc_repositories()
