load("@bazel_skylib//rules:common_settings.bzl", "string_setting")

load("@rules_ocaml//ocaml/_config:settings.bzl", "ocaml_null_module")

package(default_visibility = ["//visibility:public"])

# exports_files(glob(["bin/**"]))
# exports_files(glob(["**"]))

ocaml_null_module(name="null")

# platform(
#     name = "bytecode",
#     parents = ["@local_config_platform//:host"],
#     constraint_values = [
#         "@rules_ocaml//cfg/mode:bytecode",
#     ]
# )

# string_setting(
#     name = "projroot",
#     build_setting_default = "{projroot}"
# )

# string_setting(
#     name = "sdkpath",
#     build_setting_default = "{sdkpath}"
# )
