load("@obazl_rules_ocaml//coq/_toolchains:coq_toolchains.bzl",
     "coq_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"]
)

##########
toolchain(
    name = "coq_linux",  # this is what gets registered
    toolchain_type = ":toolchain_type", # "@coq_sdk//toolchains:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":coq_toolchain_linux",
    visibility = ["//visibility:public"]
)

################
coq_toolchain(
    name = "coq_toolchain_linux",
    coqc = "@//topbin:coqc"
)

################################################################

##########
toolchain(
    name = "coq_macos",
    toolchain_type = ":toolchain_type", # "@coq_sdk//toolchains:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//os:macos",
    ],
    toolchain = ":coq_toolchain_macos",
    visibility = ["//visibility:public"]
)

################
coq_toolchain(
    name = "coq_toolchain_macos",
    coqc = "@//topbin:coqc"
)


