load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

# bzl_library( # for stardoc
#     name = "bootstrap",
#     srcs = ["bootstrap.bzl"],
#     visibility = ["//visibility:public"],
# )

# bzl_library( # for stardoc
#     name = "macros",
#     srcs = ["macros.bzl"],
#     visibility = ["//visibility:public"],
# )

bzl_library( # for stardoc
    name = "stardoc",
    visibility = ["//visibility:public"],
    srcs = [
        ":bootstrap.bzl",
        ":macros.bzl",
        ":providers.bzl",
        ":rules.bzl",
    ],
    deps = [
        "//obazl",
        "//ocaml/_debug",
        "//ocaml/_bootstrap:bootstrap",
        "//ocaml/_providers:providers",
        "//ocaml/_rules:ocaml_rules",
        "//ocaml/_rules:ppx_rules",
        "//ocaml/_rules/utils",
        "//ocaml/_toolchains:toolchains",
        "//ppx/_bootstrap:bootstrap",
        "//ppx/_transitions:transitions",
    ]
)

# bzl_library( # for stardoc
#     name = "rules",
#     srcs = ["rules.bzl"],
#     visibility = ["//visibility:public"],
# )

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + [
        "//ocaml/config:all_files",
        "//ocaml/platform:all_files",
        "//ocaml/toolchain:all_files",
        "//ocaml/tools:all_files",
        "//ocaml/private:all_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]) + [
        "//ocaml/platform:all_rules",
        "//ocaml/private:all_rules",
        "//ocaml/toolchain:all_rules",
    ],
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

# config_setting(
#     name = "darwin",
#     values = {"host_cpu": "darwin"},
# )

# config_setting(
#     name = "k8",
#     values = {"host_cpu": "k8"},
# )
