# DO NOT REMOVE

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library( # for stardoc
    name = "stardoc",
    visibility = ["//visibility:public"],
    srcs = [
        ":_opam.bzl",
    ],
    deps = [
        "//ocaml/_debug",
    ]
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

