load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# bzl_library( # for stardoc
#     name = "providers",
#     srcs = ["_providers.bzl"],
#     visibility = ["//visibility:public"],
# )

filegroup(
    name = "stderr",
    visibility = ["//visibility:public"]
)
filegroup(
    name = "stdout",
    visibility = ["//visibility:public"]
)


# filegroup( name="migrate_parsetree_driver_shim",
#            srcs=["ocaml_migrate_parsetree_driver_shim.ml"],
#            visibility = ["//visibility:public"])

