load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "bool_setting")

package(default_visibility = ["//visibility:public"])

bool_setting( name = "debug", build_setting_default = True)
config_setting(name = "enabled", flag_values = {":debug": str(True)})

bool_setting( name = "disable", build_setting_default = False)
config_setting(name = "disabled", flag_values = {":debug": str(False)})
