load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")

package(default_visibility = ["//visibility:public"])

## 'manifest' set by transition from archive target.
## component modules use it to decide where to put structfile output
## in provider: astructs if in manifest, otherwise structs.
## list of labels (as strings) of components of an archive

## Both archives and namespaces (archived or not) use
## manifests.
string_list_flag( name = "manifest", build_setting_default = [])

