## @rules_ocaml//cfg/module ##

load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag",
     "string_list_flag")

load("@rules_ocaml//ocaml/_config:settings.bzl", "ocaml_verbose_flag")

package(default_visibility = ["//visibility:public"])

label_flag( name = "deps", build_setting_default = "@rules_ocaml//cfg:null")

label_flag( name = "cc_deps", build_setting_default = "@rules_ocaml//cfg:null")
label_flag( name = "cc_linkstatic", build_setting_default = "@rules_ocaml//cfg:null")

string_list_flag( name = "opts", build_setting_default = [])

ocaml_verbose_flag( name = "verbose", build_setting_default = False)

string_list_flag( name = "warnings",
                  build_setting_default = ["@1..3@5..28@30..39@43@46..47@49..57@61..62-40"]
)

