## @rules_ocaml//cfg/module ##

load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "bool_setting",
     "string_list_flag")

package(default_visibility = ["//visibility:public"])

label_flag( name = "deps", build_setting_default = "@rules_ocaml//cfg:null")

label_flag( name = "cc_deps", build_setting_default = "@rules_ocaml//cfg:null")
label_flag( name = "cc_linkstatic", build_setting_default = "@rules_ocaml//cfg:null")

string_list_flag( name = "opts", build_setting_default = [])

bool_flag( name = "normalize", build_setting_default = False)

bool_flag( name = "verbose", build_setting_default = False)
bool_setting( name = "verbose?", build_setting_default = True)

string_list_flag( name = "warnings",
                  build_setting_default = []
                  # "@1..3@5..28@30..39@43@46..47@49..57@61..62-40"]
)

