load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag",
     "string_flag", "string_setting",
     "string_list_flag", "string_list_setting")
load("@rules_ocaml//ocaml/_config:settings.bzl", "ocaml_verbose_flag")
load("@rules_ocaml//build:rules.bzl", "ocaml_ns_resolver")

package(default_visibility = ["//visibility:public"])

ocaml_verbose_flag( name = "verbose", build_setting_default = False)

string_list_flag( name = "warnings",
                  build_setting_default = ["@1..3@5..28@30..39@43@46..47@50..57@61..62-40",
                  "-49" # Error (warning 49): no cmi file was found in path for module
                  ]
)

string_list_setting(name = "prefixes", build_setting_default = [])
string_list_setting(name = "submodules", build_setting_default = [])
label_setting(name="resolver", build_setting_default = ":_resolver")
ocaml_ns_resolver(name    = "_resolver")

