load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")

package(default_visibility = ["//visibility:public"])

label_flag( name = "deps", build_setting_default = "@opam//:null")

bool_flag( name = "verbose", build_setting_default = False)
bool_setting( name = "verbose?", build_setting_default = True)

string_list_flag( name = "warnings",
                  build_setting_default = ["@1..3@5..28@30..39@43@46..47@50..57@61..62-40",
                  "-49" # Error (warning 49): no cmi file was found in path for module
                  ]
)
