load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "bool_setting")

package(default_visibility = ["//visibility:public"])

bool_flag( name = "short-paths", build_setting_default = True )

bool_setting( name = "enable", build_setting_default = True)
config_setting(name = "enabled", flag_values = {":short-paths": str(True)})

bool_setting( name = "disable", build_setting_default = False)
config_setting(name = "disabled", flag_values = {":short-paths": str(False)})
