load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# omitting cmx files from the compile depgraph without using -opaque:

# Warning 58 [no-cmx-file]: no cmx file was found in path for module
# Hello, and its interface was not compiled with -opaque
