load(
    ":toolchains.bzl",
    "declare_constraints",
)

package(default_visibility = ["//visibility:public"])

declare_constraints()

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
